--- a/MtdrSpring/backend/Dockerfile
+++ b/MtdrSpring/backend/Dockerfile
@@ -1,7 +1,16 @@
 FROM openjdk:22
-#COPY pom.xml /tmp/
-#COPY src /tmp/src/
-WORKDIR /tmp/
-EXPOSE 8080
+
+WORKDIR /app
+
+# Copiar el archivo JAR de la aplicación
 COPY target/MyTodoList-0.0.1-SNAPSHOT.jar MyTodoList.jar
-ENTRYPOINT ["java","-jar","MyTodoList.jar"]
+
+# Copiar la carpeta de la wallet al contenedor
+COPY src/main/resources/Wallet_FocusDB /app/Wallet_FocusDB
+
+# Exponer el puerto de la aplicación
+EXPOSE 8081
+
+# Configurar el punto de entrada
+ENTRYPOINT ["java", "-jar", "MyTodoList.jar"]
+
