--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,7 @@ frontend/build
 # misc
 .DS_Store
 .env.local
-.env.development.local
+.env.development.localq
 .env.test.local
 .env.production.local
 .idea
