--- a/MtdrSpring/backend/src/main/frontend/tsconfig.json
+++ b/MtdrSpring/backend/src/main/frontend/tsconfig.json
@@ -8,6 +8,14 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "jsx": "react-jsx", 
+    "esModuleInterop": true,
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "types": ["jest", "@testing-library/jest-dom", "node"],
+    "target": "es6",
+    "lib": ["es6", "dom"],
+    "skipLibCheck": true
   }
 }
