--- a/MtdrSpring/backend/src/main/frontend/tsconfig.app.json
+++ b/MtdrSpring/backend/src/main/frontend/tsconfig.app.json
@@ -27,8 +27,10 @@
     "paths": {
       "@/*": ["./src/*"]
     }
+
+    
   },
-  "include": ["src"],
+  "include": ["src", "babel.config.js"],
 
     "baseUrl": ".",
     "paths": {
