--- a/MtdrSpring/backend/Dockerfile
+++ b/MtdrSpring/backend/Dockerfile
@@ -1,15 +1,25 @@
+# Etapa 1: Build con Maven
+FROM maven:3.9.3-eclipse-temurin-22 AS builder
+
+WORKDIR /app
+
+# Copiar todo el proyecto al contenedor
+COPY . .
+
+# Construir el archivo JAR
+RUN mvn clean package -DskipTests
+
+# Etapa 2: Imagen final con solo el JAR y Java runtime
 FROM openjdk:22
 
 WORKDIR /app
 
-# Copiar el archivo JAR de la aplicación
-COPY target/MyTodoList-0.0.1-SNAPSHOT.jar MyTodoList.jar
+# Copiar el JAR construido desde el stage anterior
+COPY --from=builder /app/target/MyTodoList-0.0.1-SNAPSHOT.jar MyTodoList.jar
 
-# Copiar la carpeta de la wallet al contenedor
-COPY src/main/resources/Wallet_FocusDB /app/Wallet_FocusDB
+# Copiar la carpeta de la wallet
+COPY --from=builder /app/src/main/resources/Wallet_FocusDB /app/Wallet_FocusDB
 
-# Exponer el puerto de la aplicación
 EXPOSE 8080
 
-# Configurar el punto de entrada
 ENTRYPOINT ["java", "-jar", "MyTodoList.jar"]
